# llm-obs-dagster

./: .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  tree.md
.dagster/: dagster.yaml
.dagster/history/: runs.db
.dagster/history/runs/: index.db
.dagster/schedules/: schedules.db
dagster_pipeline/: __init__.py
dagster_pipeline/assets/: aggregations.py  metric_enrichment.py  mlflow_ingestion.py
dagster_pipeline/config/: settings.py
dagster_pipeline/jobs/: delta_job.py
dagster_pipeline/monitoring/: __init__.py  logging_config.py  metrics.py
dagster_pipeline/resources/: api_clients.py  duckdb_resource.py  io_manager.py  mlflow_resource.py  s3_io_manager.py
dagster_pipeline/schedules/: pipeline_schedules.py
shared/: contracts.py
